# AI-Audio-Responsive-Production

./: .gitignore  AI오디오 반응형 RGB연출.txt  README.md  pyproject.toml  requirements.txt  시스템 구현방안.txt
config/: settings.py
docs/: release_checklist.md  release_v1.0.0.md  개발계획.md
scripts/: install.sh  run_engine.sh  run_web.sh
src/: __init__.py
src/engine/: __init__.py  audio_in.py  daemon.py  failsafe.py  features.py  highlight.py  main.py  mode_manager.py
src/engine/outputs/: artnet_sender.py  udp_pixel_sender.py
src/sim/: __init__.py  dmx_simulator.py  pixel_simulator.py
src/web/: __init__.py  app.py  config_manager.py
systemd/: handds-engine.service  handds-web.service
tests/: __init__.py  test_audio_in.py  test_failsafe.py  test_highlight.py  test_install_config.py  test_mode_manager.py  test_realtime_loop.py  test_skeleton.py
