[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-stage-lighting-system"
version = "0.1.0"
description = "오디오 기반 AI 무대조명 자동 연출 시스템"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI Stage Lighting Team", email = "info@example.com"}
]

keywords = [
    "dmx",
    "lighting",
    "audio",
    "real-time",
    "stage-lighting"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sounddevice>=0.4.5",
    "click>=8.1.0",
    "questionary>=1.10.0",
]

[project.optional-dependencies]
# 개발 의존성
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# 문서 생성
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

# 모든 선택적 의존성
all = [
    "ai-stage-lighting-system[dev,docs]"
]

[project.urls]
Homepage = "https://github.com/example/ai-stage-lighting-system"
Documentation = "https://ai-stage-lighting-system.readthedocs.io"
Repository = "https://github.com/example/ai-stage-lighting-system.git"
Issues = "https://github.com/example/ai-stage-lighting-system/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# pytest 설정
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings"
]
markers = [
    "unit: 단위 테스트",
    "integration: 통합 테스트",
    "slow: 느린 테스트",
    "smoke: 스모크 테스트",
]

[tool.black]
# Black 코드 포매팅 설정
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# isort 임포트 정렬 설정
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
# mypy 타입 체크 설정
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.coverage.run]
# coverage 설정
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
